# unslice-dst

./: Cargo.toml  README.md
src/: cast.rs  lib.rs
src/allocation/: funcs.rs  mod.rs  tests.rs  uninit_box.rs
src/allocation/tests/: with_std.rs
src/cast/: auto_impl.rs  dst_cast.rs  funcs.rs  impls.rs  macro_simple.rs  macro_tt_muncher.rs  mod.rs  sealed.rs  tests.rs
src/container/: impl_box.rs  impl_rc_optimized.rs  impl_rc_with_box.rs  mod.rs
src/fat_ptr/: mod.rs  pointer_with.rs  slice_dst_pointer.rs  tests.rs
src/initializers/: mod.rs  slice_from_iter.rs
src/layout/: automatic.rs  funcs.rs  impls.rs  manual.rs  mod.rs  tests.rs
src/structs/: mod.rs  slice_with_header.rs
src/utils/: layout.rs  mod.rs  nalloc.rs  rand.rs  slice.rs  transmute_lax.rs
