[package]
name = "unslice-dst"
version = "0.1.0"
authors = ["fnrir"]
edition = "2024"
rust-version = "1.85"
readme = "README.md"

[dependencies]

[features]
default = ["cast_macro_tt_muncher", "std"]
cast_impl_core_cstr = []
cast_impl_std_cstr = ["std"]
cast_macro_tt_muncher = []
cast_unseal = []
std = ["cast_macro_tt_muncher"]
