[package]
name = "unslice-dst"
version = "0.1.1"
authors = ["fnrir"]
edition = "2024"
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/fnr1r/unslice-dst"

[dependencies]

[features]
default = ["cast_macro_tt_muncher", "std"]

cast_macro_tt_muncher = []

cast_unseal = []
container_unseal = []
core_ffi_cstr_impl = []
layout_automatic = ["cast_macro_tt_muncher"]

std = ["cast_macro_tt_muncher"]
std_ffi_cstr_impl = ["std"]
